Complete rules declaration for the homepage

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           ecosytem of networking and ideation with cental focus on improving work experiences and expanding
           the congregation of honest developers.
         </p>
-        <p class="date">2022.07.21(thu) ~ 23(Sat)</p>
+        <p class="date">2022.07.21(Thu) ~ 23(Sat)</p>
         <address>@ 8/9, Marina Road, Onikan Lagos, Nigeria.</address>
       </div>
     </section>
@@ -97,20 +97,21 @@
             </p>
           </div>
           <div class="pro-cards">
-            <img src="./images/netmind.svg" alt="image of network nodes">
+            <img src="./images/netmind.svg" alt="image of network nodes" class="features-icon">
             <h4 class="feat-bold">Y<em>'n'</em>Tech Meet &amp; NetUp</h4>
             <p class="small-text">Reduce your waiting chances and increase your network
               spread amongst pros from various parts of the world and diverse
               organizations.
             </p>
           </div>
-          <a href="about.html" class="intro">Check the whole program</a>
+          <a href="about.html" class="intro lg">Check the whole program</a>
+          <a href="about.html" class="intro sm">Join Y<i>'n'</i>Tech Global Summit 2022</a>
         </div>
       </div>
     </section>
 
     <!-- Speakers section to be loaded dynamically as JSON -->
-    <section class="speakers">
+    <section class="speaker-section">
       <div class="container">
         <h3 class="intro">Featured Speakers</h3>
         <hr class="line">
@@ -176,14 +177,14 @@
     <!-- Sponsors & Partners -->
     <section class="partners">
       <div class="container">
-        <h4 class="into fade">Partner</h4>
+        <h3 class="intro fade">Partner</h3>
         <hr class="line">
-        <div class="sponsors-logos">
-          <img src="" alt="google's logo">
-          <img src="" alt="microverse's logo">
-          <img src="" alt="yali-network's logo">
-          <img src="" alt="linkedin's">
-          <img src="" alt="UBA's">
+        <div class="sponsors-logo">
+          <img src="./images/sponsors/mindprep.png" alt="logo for mindprep africa">
+          <img src="./images/sponsors/nyc-logo.png" alt="logo for NYC-git">
+          <img src="./images/sponsors/young-net.png" alt="logo for young network">
+          <img src="./images/sponsors/microverse.png" alt="microverse logo">
+          <img src="./images/sponsors/techbots.png" alt="logo for tech-bots">
         </div>
       </div>
     </section>
@@ -196,7 +197,8 @@
       <div class="foot-note">
         <small class="copy">&copy; 2022 Youths 'n' Tech. Some rights Reserved</small>
         <p class="pps">For photo credits, check project's <a href="http://www.github.com/MindPrepDev/Youth-in-Tech/README.md">GitHub</a>
-          page. Also, don't forget to give <a href="http://www.github.com/MindPrepDev/Youth-in-Tech/README.md">this project</a>a star if you like it!</p>
+          page. <br>Also, don't forget to give <a href="http://www.github.com/MindPrepDev/Youth-in-Tech/README.md">this project</a> a star if you like it!
+        </p>
       </div>
     </div>
   </footer>
