--- a/about.html
+++ b/about.html
@@ -19,25 +19,26 @@
       <img src="./images/Close.png" alt="close menu button" class="menu">
     </div>
     <div class="navbar">
-      <div class="logo"><a href="index.html" class="logo"><img src="./images/logo.svg" alt="youths in tech logo" class="yntech-logo"></a></div>
+      <div class="logo">
+        <a href="index.html" class="logo"><img src="./images/logo.svg" alt="youths in tech logo" class="yntech-logo"></a>
+      </div>
         
       <nav>
         <ul class="nav-list">
-          <li class="hide-big"><a href="index.html">Home</a></li><hr class="line">
-          <li><a href="about.html">About</a></li><hr class="line">
-          <li><a href="#">Program</a></li><hr class="line">
-          <li><a href="#">Join</a></li><hr class="line">
-          <li><a href="#">News</a></li><hr class="line">
-          <li><a href="#" class="gradient">Sponsor</a></li><hr class="line">
+          <li class="hide-big"><a href="index.html">Home</a></li><hr class="liner">
+          <li><a href="about.html">About</a></li><hr class="liner">
+          <li><a href="#">Program</a></li><hr class="liner">
+          <li><a href="#">Join</a></li><hr class="liner">
+          <li><a href="#">News</a></li><hr class="liner">
+          <li><a href="#" class="gradient">Sponsor</a></li><hr class="liner">
         </ul>
         <!-- To be styled with position absolute on bigger-->
         <div class="acct-detail">
           <ul class="acct-list">
-            <li><a href="#"><img src="./images/Facebook.png" alt="facebook logo as link" class="facebook"><span class="hide">Follow on Facebook</span></a></li>
-            <li><a href="#"><img src="./images/tweetUs.png" alt="twitter button" class="tweet"><span class="hide">Follow on Twitter</span></a></li>
-            <li><a href="#">English</a></li>
-            <li><a href="#"><img src="./images/user.png" alt="user account icon"><span class="hide">My Page</span></a></li>
-            <li class="pad"><a href="#"><img src="./images/sign-out.png" alt="logout icon"> <span class="hide"> Logout</span></a></li>
+            <li><a href="#"><img src="./images/Facebook.png" alt="facebook logo as link" class="status fb"></a></li>
+            <li><a href="#"><img src="./images/tweetUs.png" alt="twitter button" class="status tweet"></a></li>
+            <li><a href="#"><img src="./images/user.png" alt="user account icon" class="status acct"></a></li>
+            <li class="pad"><a href="#"><img src="./images/sign-out.png" alt="logout icon" class="status log"></a></li>
           </ul>
         </div>
     </nav>
@@ -49,7 +50,7 @@
     <section class="welcome aboutYnT">
       <div class="container about">
         <h3 class="intro gradient">"Hey Again!"</h3>
-        <h1 class="theme">Youths 'n' Tech Global Summit 2022</h1>
+        <h1 class="theme">Youths<i>'n'</i>Tech Global Summit 2022</h1>
         <p class="intro-text">
           This year's summit unlike every other brings together nuanced 
           experts and professionals from top companies all over the world 
@@ -120,7 +121,7 @@
     </section>
   </main>
 
-  <footer>
+  <footer class="desk">
     <div class="container">
       <div class="end-logo">
         <img src="./images/composite.png" alt="main logo for Youths in Tech" class="composite-logo">
