--- a/index.html
+++ b/index.html
@@ -10,44 +10,48 @@
 </head>
 <body>
   
-  <!-- menu controls for small screens up to 767px -->
-  <div class="menu-controls">
-    <img src="./images/menu.svg" alt="menu icon" class="menu open">
-    <img src="./images/Close.png" alt="close menu button" class="menu exit">
-  </div>
   <!-- Header section with two child divisions -->
   <header class="header">
-    <div class="navbar">
-      <div class="logo"><a href="index.html" class="logo"><img src="./images/logo.svg" alt="youths in tech logo" class="yntech-logo"></a></div>
-        
-      <nav>
-        <ul class="nav-list">
-          <li><a href="about.html">About</a></li>
-          <li><a href="#">Program</a></li>
-          <li><a href="#">Join</a></li>
-          <li><a href="#">News</a></li>
-          <li><a href="#" class="gradient">Sponsor</a></li>
-        </ul>
-      </nav>
+    <!-- menu controls for small screens up to 767px -->
+  <div class="menu-controls">
+    <img src="./images/menu.svg" alt="menu icon" class="menu">
+    <img src="./images/Close.png" alt="close menu button" class="menu">
+  </div>
+  <div class="navbar">
+      <div class="logo">
+        <a href="index.html" class="logo">
+          <img src="./images/logo.svg" alt="youths in tech logo" class="yntech-logo">
+        </a>
+      </div>
+      
+    <nav>
+      <ul class="nav-list">
+        <li class="hide-big"><a href="index.html">Home</a></li><hr class="liner">
+        <li><a href="about.html">About</a></li><hr class="liner">
+        <li><a href="#">Program</a></li><hr class="liner">
+        <li><a href="#">Join</a></li><hr class="liner">
+        <li><a href="#">News</a></li><hr class="liner">
+        <li><a href="#" class="gradient">Sponsor</a></li><hr class="liner">
+      </ul>
       <!-- To be styled with position absolute on bigger-->
       <div class="acct-detail">
         <ul class="acct-list">
-          <li><a href="#"><img src="./images/Facebook.png" alt="facebook logo as link" class="facebook"></a></li>
-          <li><a href="#"><img src="./images/tweetUs.png" alt="twitter button" class="tweet"></a></li>
-          <li><a href="#">English</a></li>
-          <li><a href="#">My Page</a></li>
-          <li><a href="#">Logout <img src="./images/sign-out.png" alt="logout icon"></a></li>
+          <li><a href="#"><img src="./images/Facebook.png" alt="facebook logo as link" class="status fb"></a></li>
+          <li><a href="#"><img src="./images/tweetUs.png" alt="twitter button" class="status tweet"></a></li>
+          <li><a href="#"><img src="./images/user.png" alt="user account icon" class="status acct"></a></li>
+          <li class="pad"><a href="#"><img src="./images/sign-out.png" alt="logout icon" class="status log"></a></li>
         </ul>
       </div>
-    </div>
-  </header>
+  </nav>
+  </div>
+</header>
 
   <!-- Home Page for main interaction -->
   <main>
     <section class="welcome">
       <div class="container">
         <h3 class="intro gradient">"Hey Techie!"</h3>
-        <h1 class="theme">Youths 'n' Tech Global Summit 2022</h1>
+        <h1 class="theme">Youths<i>'n'</i>Tech Global Summit 2022</h1>
         <p class="intro-text">
           An initiative that inspires, motivates and shares the joy of being part of the “Make-It-Happen”,
           bringing myriads of developers, programmers as well as new entrants in the tech space in a common
@@ -57,6 +61,7 @@
         <p class="date">2022.07.21(Thu) ~ 23(Sat)</p>
         <address>@ 8/9, Marina Road, Onikan Lagos, Nigeria.</address>
       </div>
+      <div class="masked"></div>
     </section>
 
     <!-- Program Features section -->
@@ -75,38 +80,36 @@
           <div class="pro-cards">
             <img src="./images/exhibition.svg" alt="image of drawing space">
             <h4 class="feat-bold">Y<em>'n'</em>Tech Exhibition</h4>
-            <p class="small-text">Come see diverse proficiencies deployed to ameliorating basic challenges that
-              clients/users face in this unfolding era of data security and the management of
-              other web assets for improved accessibility.
+            <p class="small-text">Appreciate diverse proficiencies deployed at solving basic challenges that
+              of this unfolding era of data security and web assets' management.
             </p>
           </div>
           <div class="pro-cards">
             <img src="./images/forum.svg" alt="images of texts">
             <h4 class="feat-bold">Forum</h4>
             <p class="small-text">Get to share your thought processes on specific topics, coding
-              challenges and ask questions about identified hiring agencies of companies
-              from experts.
+              challenges and ask questions about job searching &amp; interviews.
             </p>
           </div>
           <div class="pro-cards">
             <img src="./images/workshop.svg" alt="image of a board and a painting brush">
             <h4 class="feat-bold">Workshop</h4>
-            <p class="small-text">Jointly deploy individual competencies and strengths
+            <p class="small-text">Show individual competencies and strengths
               using open source license for greater good while boosting your your
               resume for future job searching.
             </p>
           </div>
           <div class="pro-cards">
             <img src="./images/netmind.svg" alt="image of network nodes" class="features-icon">
-            <h4 class="feat-bold">Y<em>'n'</em>Tech Meet &amp; NetUp</h4>
+            <h4 class="feat-bold">Y<em>'n'</em>T MeetUp</h4>
             <p class="small-text">Reduce your waiting chances and increase your network
               spread amongst pros from various parts of the world and diverse
               organizations.
             </p>
           </div>
+        </div>
           <a href="about.html" class="intro lg">Check the whole program</a>
           <a href="about.html" class="intro sm">Join Y<i>'n'</i>Tech Global Summit 2022</a>
-        </div>
       </div>
     </section>
 
@@ -134,48 +137,50 @@
               <p class="abt-speaker">Prescot is famed for his beastly proficiency in C#, Java, Python, AS.Net, etc</p>
             </div>
           </div>
-          <div class="speaker">
-            <img src="./images/speakers/speaker3.png" alt="image of the third speaker">
-            <div class="meet-speaker">
-              <h1 class="intro white">Prescot Daniels</h1>
-              <span class="info"><em>Senior Full Stack Developer at Kinfork Inc</em></span>
-              <hr class="line">
-              <p class="abt-speaker">Prescot is famed for his beastly proficiency in C#, Java, Python, AS.Net, etc</p>
+          <hr class="line full one">
+            <div class="speaker">
+              <img src="./images/speakers/speaker3.png" alt="image of the third speaker">
+              <div class="meet-speaker">
+                <h1 class="intro white">Prescot Daniels</h1>
+                <span class="info"><em>Senior Full Stack Developer at Kinfork Inc</em></span>
+                <hr class="line">
+                <p class="abt-speaker">Prescot is famed for his beastly proficiency in C#, Java, Python, AS.Net, etc</p>
+              </div>
             </div>
-          </div>
-          <div class="speaker">
-            <img src="./images/speakers/speaker4.png" alt="image of the four speaker">
-            <div class="meet-speaker">
-              <h1 class="intro white">Prescot Daniels</h1>
-              <span class="info"><em>Senior Full Stack Developer at Kinfork Inc</em></span>
-              <hr class="line">
-              <p class="abt-speaker">Prescot is famed for his beastly proficiency in C#, Java, Python, AS.Net, etc</p>
+            <div class="speaker">
+              <img src="./images/speakers/speaker4.png" alt="image of the four speaker">
+              <div class="meet-speaker">
+                <h1 class="intro white">Prescot Daniels</h1>
+                <span class="info"><em>Senior Full Stack Developer at Kinfork Inc</em></span>
+                <hr class="line">
+                <p class="abt-speaker">Prescot is famed for his beastly proficiency in C#, Java, Python, AS.Net, etc</p>
+              </div>
             </div>
-          </div>
-          <div class="speaker">
-            <img src="./images/speakers/spaker5.png" alt="image of the five speaker">
-            <div class="meet-speaker">
-              <h1 class="intro white">Prescot Daniels</h1>
-              <span class="info"><em>Senior Full Stack Developer at Kinfork Inc</em></span>
-              <hr class="line">
-              <p class="abt-speaker">Prescot is famed for his beastly proficiency in C#, Java, Python, AS.Net, etc</p>
+            <hr class="line full two">
+            <div class="speaker">
+              <img src="./images/speakers/spaker5.png" alt="image of the five speaker">
+              <div class="meet-speaker">
+                <h1 class="intro white">Prescot Daniels</h1>
+                <span class="info"><em>Senior Full Stack Developer at Kinfork Inc</em></span>
+                <hr class="line">
+                <p class="abt-speaker">Prescot is famed for his beastly proficiency in C#, Java, Python, AS.Net, etc</p>
+              </div>
             </div>
-          </div>
-          <div class="speaker">
-            <img src="./images/speakers/speaker6.png" alt="image of the six speaker">
-            <div class="meet-speaker">
-              <h1 class="intro white">Prescot Daniels</h1>
-              <span class="info"><em>Senior Full Stack Developer at Kinfork Inc</em></span>
-              <hr class="line">
-              <p class="abt-speaker">Prescot is famed for his beastly proficiency in C#, Java, Python, AS.Net, etc</p>
+            <div class="speaker">
+              <img src="./images/speakers/speaker6.png" alt="image of the six speaker">
+              <div class="meet-speaker">
+                <h1 class="intro white">Prescot Daniels</h1>
+                <span class="info"><em>Senior Full Stack Developer at Kinfork Inc</em></span>
+                <hr class="line">
+                <p class="abt-speaker">Prescot is famed for his beastly proficiency in C#, Java, Python, AS.Net, etc</p>
+              </div>
             </div>
-          </div>
         </div>
       </div>
     </section>
 
     <!-- Sponsors & Partners -->
-    <section class="partners">
+    <section id="big-partner" class="partners">
       <div class="container">
         <h3 class="intro fade">Partner</h3>
         <hr class="line">
@@ -192,7 +197,7 @@
   <footer>
     <div class="container">
       <div class="end-logo">
-        <img src="./images/composite.png" alt="main logo for Youths in Tech" class="composite-logo">
+        <img src="./images/adjusted.png" alt="main logo for Youths in Tech" class="composite-logo">
       </div>
       <div class="foot-note">
         <small class="copy">&copy; 2022 Youths 'n' Tech. Some rights Reserved</small>
@@ -202,5 +207,7 @@
       </div>
     </div>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
