Fix broken elements Effect linter issues and hide exit button on big screen

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       <!-- To be styled with position absolute on bigger-->
       <div class="acct-detail">
         <ul class="acct-list">
-          <li><a href="#"><img src="./images/Facebook.png" alt="facebook logo as link" class="status fb"></a></li>
-          <li><a href="#"><img src="./images/tweetUs.png" alt="twitter button" class="status tweet"></a></li>
-          <li><a href="#"><img src="./images/user.png" alt="user account icon" class="status acct"></a></li>
-          <li class="pad"><a href="#"><img src="./images/sign-out.png" alt="logout icon" class="status log"></a></li>
+          <li title="Join us on Facebook"><a href="#"><img src="./images/Facebook.png" alt="facebook logo as link" class="status fb"></a></li>
+          <li title="Follow us on Twitter"><a href="#"><img src="./images/tweetUs.png" alt="twitter button" class="status tweet"></a></li>
+          <li title="My profile"><a href="#"><img src="./images/user.png" alt="user account icon" class="status acct"></a></li>
+          <li title="Sign out" class="pad"><a href="#"><img src="./images/sign-out.png" alt="logout icon" class="status log"></a></li>
         </ul>
       </div>
   </nav>
@@ -52,7 +52,7 @@
     <section class="welcome">
       <div class="container">
         <h3 class="intro gradient">"Hey Techie!"</h3>
-        <h1 class="theme">Youths<i>'n'</i>Tech Global Summit 2022</h1>
+        <h1 class="theme">Youths <i>'n'</i> Tech Global Summit 2022</h1>
         <p class="intro-text">
           An initiative that inspires, motivates and shares the joy of being part of the “Make-It-Happen”,
           bringing myriads of developers, programmers as well as new entrants in the tech space in a common
@@ -80,7 +80,7 @@
           </div>
           <div class="pro-cards">
             <img src="./images/exhibition.svg" alt="image of drawing space">
-            <h4 class="feat-bold">Y<em>'n'</em>Tech Exhibition</h4>
+            <h4 class="feat-bold">Y <em>'n'</em> Tech Exhibition</h4>
             <p class="small-text">Appreciate diverse proficiencies deployed at solving basic challenges that
               of this unfolding era of data security and web assets' management.
             </p>
@@ -102,7 +102,7 @@
           </div>
           <div class="pro-cards">
             <img src="./images/netmind.svg" alt="image of network nodes" class="features-icon">
-            <h4 class="feat-bold">Y<em>'n'</em>T MeetUp</h4>
+            <h4 class="feat-bold">Y <em>'n'</em> T MeetUp</h4>
             <p class="small-text">Reduce your waiting chances and increase your network
               spread amongst pros from various parts of the world and diverse
               organizations.
@@ -147,8 +147,8 @@
       </div>
       <div class="foot-note">
         <small class="copy">&copy; 2022 Youths 'n' Tech. Some rights Reserved</small>
-        <p class="pps">For photo credits, check project's <a href="http://www.github.com/MindPrepDev/Youth-in-Tech/README.md">GitHub</a>
-          page. <br>Also, don't forget to give <a href="http://www.github.com/MindPrepDev/Youth-in-Tech/README.md">this project</a> a star if you like it!
+        <p class="pps">For photo credits, check project's <a href="http://www.github.com/AbayomiOlaoye/Youth-in-Tech/README.md">GitHub</a>
+          page. <br>Also, don't forget to give <a href="http://www.github.com/AbayomiOlaoye/Youth-in-Tech/README.md">this project</a> a star if you like it!
         </p>
       </div>
     </div>
