Change date and update README.md file

--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
         <h3 class="intro">Y<i>'n'</i>Tech Global Summit 2022 Logo</h3>
         <hr class="line">
         <p class="intro-text">The logo of <span>Y'n'Tech Global Summit 2022</span> was designed by 
-          MindPrepDev, a young and energetic Software Developer, and it was accepted by two-third of 
+          MindPrep; a young and energetic Software Developer, and it was accepted by two-third of 
           our available stakeholders which is now officially being launched as:
         </p>
         <div class="specimen">
