Update github referenced file path

--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
       </div>
       <div class="foot-note">
         <small class="copy">&copy; 2022 Youths 'n' Tech. Some rights Reserved</small>
-        <p class="pps">For photo credits, check project's <a href="http://www.github.com/AbayomiOlaoye/Youth-in-Tech/README.md">GitHub</a>
-          page. <br>Also, don't forget to give <a href="http://www.github.com/AbayomiOlaoye/Youth-in-Tech/README.md">this project</a> a star if you like it!
+        <p class="pps">For photo credits, check project's <a href="http://www.github.com/AbayomiOlaoye/Youth-in-Tech/">GitHub</a>
+          page. <br>Also, don't forget to give <a href="http://www.github.com/AbayomiOlaoye/Youth-in-Tech/">this project</a> a star if you like it!
         </p>
       </div>
     </div>
