--- a/about.html
+++ b/about.html
@@ -128,8 +128,8 @@
       </div>
       <div class="foot-note">
         <small class="copy">&copy; 2022 Youths 'n' Tech. Some rights Reserved</small><br>
-        <small class="pps">For photo credits. Check project's <a href="http://www.github.com/AbayomiOlaoye/Youth-in-Tech/README.md">GitHub</a>
-          page. <br>Also, don't forget to give this<a href="http://www.github.com/AbayomiOlaoye/Youth-in-Tech/README.md"> project</a> a star if you like it!
+        <small class="pps">For photo credits. Check project's <a href="http://www.github.com/AbayomiOlaoye/Youth-in-Tech/">GitHub</a>
+          page. <br>Also, don't forget to give this<a href="http://www.github.com/AbayomiOlaoye/Youth-in-Tech/"> project</a> a star if you like it!
         </small>
       </div>
     </div>
